[tool.poetry]
name = "myapp"
version = "0.1.0"
description = ""
authors = ["yuichi ito <yito86@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.82.0"
requests = "*"


[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
pytest = "^7.1.3"


[tool.poetry.group.doc.dependencies]
Sphinx = "^5.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
